Fix: tweak heading spacing a little

--- a/src/common/02-group-d/type.less
+++ b/src/common/02-group-d/type.less
@@ -17,7 +17,7 @@
 
 .type-trafalgar {
     font-size: 32px;
-    line-height: 32px;
+    line-height: 36px;
     margin-top: 24px;
     margin-bottom: @type-pica-font-size;
 }
@@ -31,7 +31,7 @@
 
 .type-greatprimer {
     font-size: 20px;
-    line-height: 20px;
+    line-height: 24px;
     margin-bottom: @type-pica-font-size;
 }
 
